issue fix related to eag member component UI alignment in an ipad

--- a/clientlib-base/css/advertise.less
+++ b/clientlib-base/css/advertise.less
@@ -2,7 +2,7 @@
 @import "./partials/mixins.less";
 
 .advertise{
-   margin: 50px auto;
+   margin: 30px auto;
    width: 100%;
    &__heading{
       line-height: 34px;
