--- a/clientlib-base/css/partials/typography.less
+++ b/clientlib-base/css/partials/typography.less
@@ -910,7 +910,7 @@ strong{
          line-height: 36px;
       }
       &--jrnlcrd{
-         font-size: 28px;
+         font-size: 24px;
          line-height: 30px;
       }
       &--jrnlrla{
@@ -972,7 +972,8 @@ strong{
          font-size: 22px;
          line-height: 32px;
          font-family: @RICS--Medium;
-         height: 65px!important;
+         max-height: 65px!important;
+         height: auto;
          overflow: hidden;
       }
       &--jnlpghead{
