--- a/clientlib-base/css/property.less
+++ b/clientlib-base/css/property.less
@@ -131,11 +131,11 @@
 @media (min-width: 834.02px) and (max-width: 992px) {
    .propertylist{
       &__label{
-         width: 150px;
+         width: 120px;
          margin-right: 10px;
       }
       &__value{
-         width: 150px;
+         width: 120px;
          margin-right: 0px;
       }
    }
